# geneinfo

./: .gitignore  .nojekyll  CHANGELOG.md  LICENSE  README.md  _setup.cfg  _sidebar.yml  about.html  bump_version.py  conda-release.sh  conda.sh  docs-build-render.sh  docs-run-notebooks.sh  example.ipynb  index.html  nbt.3102-S4_GeneIDs.csv  pyproject.toml  release-tag.sh  requirements.txt  robots.txt  search.json  setup.cfg  setup.py  sitemap.xml  styles.css  test.sh
.github/workflows/: README.md  conda-release.yml  docs-and-installers.yml  publish_conda.yml  pypi-release.yml  quarto-publish.yml
.scripts/: bump_changelog.py  bump_version.py  claude-session.sh  docs-run-notebooks.sh  init-library.sh  init-project.sh  release-tag.sh  template_init.py
.virtual_documents/docs/pages/: google_sheets.ipynb
api/: ChromIdeogram.html  GeneList.html  GeneListCollection.html  GenomeIdeogram.html  GoogleSheet.html  Tracks.html  bar.baz.html  chrom_ideogram.html  clear_cache.html  download_and_move_go_basic_obo.html  download_data.html  download_ncbi_associations.html  email.html  ensembl2ncbi.html  ensembl2symbol.html  ensembl_get_gene_info_by_symbol.html  ensembl_get_genes_region.html  ensembl_id.html  foo.html  gene_annotation_table.html  gene_coord.html  gene_coords.html  gene_coords_region.html  gene_info.html  gene_info_region.html  gene_plot.html  get_genes_for_go_regex.html  get_genes_for_go_terms.html  get_genes_region.html  get_genes_region_dataframe.html  get_go_terms_for_genes.html  get_terms_for_go_regex.html  go_annotation_table.html  go_enrichment.html  go_info.html  go_name2term.html  go_term2name.html  hgcn_symbol.html  horizon.html  index.html  (+12 more)
binder/: README.md  environment.yml
conda-build/: build_env.yaml  meta.yaml
conda.recipe/: README.md  meta.yaml
data/: Readme.md
docs/: README.md  _quarto.yml  about.qmd  autodoc.mustache  custom.scss  styles.css
docs/api/: ChromIdeogram.qmd  GeneList.qmd  GeneListCollection.qmd  GenomeIdeogram.qmd  GoogleSheet.qmd  Tracks.qmd  _sidebar.yml  bar.baz.qmd  chrom_ideogram.qmd  clear_cache.qmd  download_and_move_go_basic_obo.qmd  download_data.qmd  download_ncbi_associations.qmd  email.qmd  ensembl2ncbi.qmd  ensembl2symbol.qmd  ensembl_get_gene_info_by_symbol.qmd  ensembl_get_genes_region.qmd  ensembl_id.qmd  foo.qmd  gene_annotation_table.qmd  gene_coord.qmd  gene_coords.qmd  gene_coords_region.qmd  gene_info.qmd  gene_info_region.qmd  gene_plot.qmd  get_genes_for_go_regex.qmd  get_genes_for_go_terms.qmd  get_genes_region.qmd  get_genes_region_dataframe.qmd  get_go_terms_for_genes.qmd  get_terms_for_go_regex.qmd  go_annotation_table.qmd  go_enrichment.qmd  go_info.qmd  go_name2term.qmd  go_term2name.qmd  hgcn_symbol.qmd  horizon.qmd  (+13 more)
docs/pages/: advanced.qmd  basics.qmd  caching.ipynb  cashing.ipynb  chrom_ideograms-Copy1.ipynb  chrom_ideograms.ipynb  chrom_plots.ipynb  examples.ipynb  gene_coord.ipynb  gene_ids.ipynb  gene_information.ipynb  gene_lists.ipynb  gene_lists.yaml  gene_plots.ipynb  getting_started.ipynb  getting_started.qmd  go_graphs.ipynb  go_info.ipynb  google_sheet.csv  google_sheets.ipynb  new_retrieval_method.ipynb  something.ipynb  string_nets.ipynb  tracks_widget.ipynb  upset.ipynb  venn.ipynb
geneinfo/: __init__.py  chromosome_plot.py  gene_info.py  gene_ontology.py  gene_plot.py  utils.py
geneinfo/data/: cytoband_hg19.csv  cytoband_hg38.csv  g-bands_T2T_hs1.csv  g-bands_hg19.csv  gene_lists.pickle
geneinfo/information/: __init__.py
geneinfo/lift/: segment_liftover.py
geneinfo/ontology/: __init__.py
geneinfo/plot/: __init__.py  chromosome.py  genome.py  region.py
notebooks/: Untitled.ipynb  build_cache.py  chr3_region.ipynb  chrom_tracks_demo.ipynb  test.ipynb
pages/: advanced.html  basics.html  caching.html  cashing.html  chrom_ideograms-Copy1.html  chrom_ideograms-Copy2.html  chrom_ideograms.html  chrom_plots.html  circos.html  examples.html  gene_coord.html  gene_ids.html  gene_information.html  gene_lists.html  gene_plots.html  getting_started.html  go_enrichment.html  go_graphs.html  go_info.html  google_sheets.html  new_retrieval_method.html  overview.html  something.html  string_nets.html  tracks_widget.html  upset.html  venn.html
scripts/: bump_version.py  docs-build-render.sh  docs-run-notebooks.sh  git-commit.sh  github-release.sh  rename.py  tmux-project.sh
site_libs/bootstrap/: bootstrap-92d4e41d3cf3426e5c0aa49e76d8d866.min.css
src/geneinfo/: __init__.py  genelist.py  intervals.py  utils.py
src/geneinfo/chrom_tracks/: __init__.py  segment_viewer_gl.py
src/geneinfo/coords/: __init__.py
src/geneinfo/data/: cytoband_hs1.csv
src/geneinfo/genelist/: __init__.py
src/geneinfo/information/: __init__.py
src/geneinfo/ontology/: __init__.py
src/geneinfo/plot/: __init__.py  chromosome.py  genome.py  hic.ipynb  region.py  upset.py  venn.py
src/geneinfo/string/: __init__.py  interactions.py
src/geneinfo/ucsc/: __init__.py
src/geneinfo/widget/: __init__.py  segment_viewer_gl.py
test/: test_modulename.py
