[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "geneinfo"
version = "5.3.14"
description = "..."
requires-python = ">=3.9"
authors = [{name = "Kasper Munch", email = "kaspermunch@birc.au.dk"}]

dependencies = [
    'jupyter',
    'ipython',
    'matplotlib >= 3.0',
    'seaborn',
    'numpy >= 1.1',
    'requests',
    'biopython',
    'goatools >= 1.2',
    'tables',
    'wget',
    'pydot',
    'statsmodels',
]

classifiers = [
    "Programming Language :: Python :: 3"
]

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
geneinfo = ["data/*.txt", "data/*.csv", "data/*.pickle"]


[project.urls]
Homepage = "https://munch-group.org/geneinfo"
Documentation = "https://munch-group.org/geneinfo"
Repository = "https://github.com/munch-group/geneinfo.git"
Issues = "https://github.com/munch-group/geneinfo/issues"

[tool.pixi.workspace]
channels = ["conda-forge"]
platforms = ["osx-arm64", "osx-64", "linux-64"]

[tool.pixi.pypi-dependencies]
geneinfo = { path = ".", editable = true }

[tool.pixi.tasks]
