[metadata]
name = geneinfo
version = 5.0.15
author = Kasper Munch
author_email = kaspermunch@birc.au.dk
description= Project description
url = https://github.com/munch-group/geneinfo
classifiers =
    License :: OSI Approved :: MIT License
    Programming Language :: Python :: 3

[options]
packages = find:
python_requires = >=3.9
include_package_data = True
install_requires=file: requirements.txt

[options.package_data]
geneinfo =
    data/*.txt, data/*.csv, data/*.pickle
